Implement LibraryManager
remove LibraryLinker and LibraryUtils